--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="src/styles/global.css">
     <link rel="stylesheet" href="src/styles/media.css">
+    <link rel="stylesheet" href="src/styles/acordio.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,35 +30,49 @@
             <p>p03@gmail.com</p>
         </section>
     </header>
+    <main class="tudo">
+        <section class="acord">
+            <button class="accordion">
+                <p>
+                    Skiys<span class="material-symbols-outlined">expand_more</span>
+                </p>
+            </button>
+            <div class="panel">
+                <div class="cont1">
+                    <img src="src/imagens/icons8-nativo-de-reagir.svg" alt="">
+                    <img src="src/imagens/icons8-javascript (1).svg" alt="">
+                    <img src="src/imagens/icons8-html (1).svg" alt="">
+                    <img src="src/imagens/icons8-css (2).svg" alt="">
+                </div>
+                <div>
+    
+                </div>
+            </div>
+        </section>
+        <section class="acord">
 
-    <main>
-        <section class="detalha1">
-            <p>
-                Skiys<span class="material-symbols-outlined">expand_more</span>
-            </p>
+            <button class="accordion">
+                <p>
+                    Skiys<span class="material-symbols-outlined">expand_more</span>
+                </p>
+            </button>
+            <div class="panel">
+                <p>Lorem ipsum...</p>
+            </div>
         </section>
-        <section class="detalha2">
-            <p>
-                idiomas<span class="material-symbols-outlined">expand_more</span>
-            </p>
-        </section>
-        <section class="detalha3">
-            <p>
-                Educação<span class="material-symbols-outlined">expand_more</span>
-            </p>
-        </section>
-        <section class="detalha4">
-            <p>
-                portifolio<span class="material-symbols-outlined">expand_more</span>
-            </p>
-        </section>
-        <section class="detalha5">
-            <p>
-                Experiência profisional<span class="material-symbols-outlined">expand_more</span>
-            </p>
+        <section class="acord">
+            <button class="accordion">
+                <p>
+                    Idiomas<span class="material-symbols-outlined">expand_more</span>
+                </p>
+            </button>
+            <div class="panel">
+                <div class="cont3">
+                    <p>Portugues</p>
+                </div>
+            </div>
         </section>
     </main>
-
     <footer>
         <section>
 
