--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             <h1>Ola, eu sou o carlos</h1>
             <p>junior developer</p>
             <p>permanpuco - PE</p>
-            <p>81 992465279</p>
-            <p>p03@gmail.com</p>
+            <p><a href="tel:81 992465279">81 992465279</a></p>
+            <p><a href="mailto:p03@gmail.com">p03@gmail.com</a></p>
         </section>
     </header>
     <main class="tudo">
@@ -58,6 +58,19 @@
             <div class="panel">
                 <div class="cont2">
                     <p>Portugues</p>
+                </div>
+            </div>
+        </section>
+        <section class="acord">
+            <button class="accordion">
+                <p>
+                    Repositorios<span class="material-symbols-outlined">expand_more</span>
+                </p>
+            </button>
+            <div class="panel">
+                <div class="cont3">
+                    <p><img class="img" src="src/imagens/icons8-github.svg" alt=""> <a href="https://github.com/Carloseduardomelo/javascript"> JavaScript Estudos</a></p>
+                    <p><a href="https://github.com/Carloseduardomelo/javascript">https://github.com/Carloseduardomelo/javascript</a></p>
                 </div>
             </div>
         </section>
