--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 </p>
             </button>
             <div class="panel">
-                <div class="cont1">
+                <div class="cont1 cont">
                     <img src="src/imagens/icons8-nativo-de-reagir.svg" alt="">
                     <img src="src/imagens/icons8-javascript (1).svg" alt="">
                     <img src="src/imagens/icons8-html (1).svg" alt="">
@@ -56,7 +56,7 @@
                 </p>
             </button>
             <div class="panel">
-                <div class="cont2">
+                <div class="cont2 cont">
                     <p>Portugues</p>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                 </p>
             </button>
             <div class="panel">
-                <div class="cont3">
+                <div class="cont3 cont">
                     <p><img class="img" src="src/imagens/icons8-github.svg" alt=""> <a href="https://github.com/Carloseduardomelo/javascript" target="_blank"> JavaScript Estudos</a></p>
                     <p><a href="https://github.com/Carloseduardomelo/javascript" target="_blank">https://github.com/Carloseduardomelo/javascript</a></p>
                 </div>
